--- a/index.html
+++ b/index.html
@@ -106,9 +106,6 @@
 </div>
 
 
-<!-- 
-    
-
    
 
         <h1 class="gaming_products">Discover Opera's <br> Gaming  Products</h1>
@@ -193,6 +190,6 @@
             <p class="brand_text">Innovate and inspire, uncover the unexpected, support open standards. <br> <hr></p>
         </div>
 
-    </div> -->
+    </div> 
 </body>
 </html>
