saving new changes

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
                 <h1 class="know_us_text">WHO WE ARE</h1>
         </div>
     </div>
+    <div class="know_us2">
+        <div class="know_us2_text">WHO WE ARE</div>
+        <h1>Check out the world's first gaming browser, Opera GX, plus see how easy Opera is
+            making it to create and develop your own games.</h1>
+    </div>
     <div class="pink_space">
         <div class="deserved_browser">
             <div>
